--- a/index0.html
+++ b/index0.html
@@ -13,7 +13,7 @@
       <button type="button" id="submit" class="btn">入力</button>
     </div>
     <p id="result">
-      <h1 class="test">どんどんがんばるぞ！</h1>
+      <h1 class="test">どんどんがんばるぞ</h1>
     </p>
   </body>
 </html>
